<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="#E2EEF7"
    android:id="@+id/mainContainer">

    <!--<androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="6dp">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_3"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:id="@+id/appContainer">

                <ImageButton
                    android:id="@+id/open_history_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/history_button_round"
                    android:scaleType="fitCenter"
                    android:background="@null"/>

                <FrameLayout
                    android:id="@+id/soundGraphContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:orientation="vertical"
                        android:background="@drawable/graph_background_2"
                        android:layout_centerHorizontal="true"
                        android:gravity="center">

                        <com.cornford.games.pipepower.graph.SoundGraphView
                            android:id="@+id/soundGraphView"
                            android:layout_width="200dp"
                            android:layout_height="200dp"/>

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp">

                        <TextView
                            android:id="@+id/maxDbTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_regular"
                            android:text="0"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toTopOf="@id/soundValueTextView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_regular"
                            android:text=":max"
                            android:textSize="16sp"
                            android:layout_marginStart="4dp"
                            android:layout_marginBottom="4dp"
                            app:layout_constraintBottom_toBottomOf="@id/maxDbTextView"
                            app:layout_constraintStart_toEndOf="@id/maxDbTextView"/>

                        <TextView
                            android:id="@+id/soundValueTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_regular"
                            android:text="0"
                            android:textSize="32sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_regular"
                            android:text="db"
                            android:textSize="16sp"
                            android:layout_marginStart="4dp"
                            android:layout_marginBottom="4dp"
                            app:layout_constraintBottom_toBottomOf="@id/soundValueTextView"
                            app:layout_constraintStart_toEndOf="@id/soundValueTextView"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

                <com.cornford.games.pipepower.SoundMeterView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:id="@+id/soundMeterView"
                    android:visibility="gone"
                    android:layout_centerHorizontal="true" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/soundGraphContainer"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/warningLayout"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noise_level"
                        android:gravity="center"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/lato_regular"
                        android:id="@+id/warningText"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/low_level"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:textColor="@color/text_color"
                        android:id="@+id/levelText" />
                </LinearLayout>

                <ToggleButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:text=""
                    android:textOn="@null"
                    android:textOff="@null"
                    android:id="@+id/toggleButton"
                    android:background="@drawable/start_stop_selector"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="bottom"/>

                <ToggleButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text=""
                    android:textOn="@null"
                    android:textOff="@null"
                    android:id="@+id/recordButton"
                    android:visibility="gone"
                    android:background="@drawable/record_selector"
                    android:layout_gravity="bottom"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/toggleButton"
                    android:layout_toEndOf="@+id/toggleButton"
                    android:layout_marginBottom="16dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"
                android:layout_below="@+id/appContainer">
            </com.google.android.gms.ads.AdView>

        </LinearLayout>

    <!--</androidx.cardview.widget.CardView>-->

</LinearLayout>
